--- a/src/components/CreateModal/index.css
+++ b/src/components/CreateModal/index.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 1.5rem;
   right: 1.5rem;
+  z-index: 1;
 }
 
 .add-new img {
